--- a/template/packr.css
+++ b/template/packr.css
@@ -1,1 +1,11 @@
--- packr css --
+/*  
+ * packr (https://ob-dev.de)
+ *
+ * @theme_name [THEME NAME]
+ * @theme_id [THEME ID]
+ * @author [THEME AUTHOR]
+ * @version [THEME VERSION]
+ *
+ */
+ 
+/* The CSS you need for the theme goes here */
