--- a/template/desc.html
+++ b/template/desc.html
@@ -7,16 +7,16 @@
   - @version 1.0
   -->
   
-<div lang="en">
+<div data-lang="en">
   <!-- Description in English -->
 </div>
 
-<div lang="de">
+<div data-lang="de">
   <!-- Beschreibung in Deutsch -->
 </div>
 
 <!-- 
-  - lang="en" is obligatory, any other language can be omitted
+  - data-lang="en" is obligatory, any other language can be omitted
   - supported languages: English [en], German [de]
   -
   - You can use Twitter Bootstrap (http://getbootstrap.com) elements here!
