--- a/template/desc.html
+++ b/template/desc.html
@@ -1,10 +1,10 @@
 <!-- 
   - packr (https://ob-dev.de)
   -
-  - @theme_name The Example Theme
-  - @theme_id example-theme
-  - @author packr (http://twitter.com/packr_official)
-  - @version 1.0
+  - @theme_name [THEME NAME]
+  - @theme_id [THEME ID]
+  - @author [THEME AUTHOR]
+  - @version [THEME VERSION]
   -->
   
 <div data-lang="en">
